corrigiendo las funciones de guardar